k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planit-ingress
  namespace: planit-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:746491138596:certificate/892924a7-2a96-413e-982f-4b9a1ef9ac73
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # ✅ USER SERVICE
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: planit-user-svc
                port:
                  number: 8081

          # ✅ STRATEGY SERVICE
          - path: /api/v1/strategy
            pathType: Prefix
            backend:
              service:
                name: planit-strategy-svc
                port:
                  number: 8083

          # ✅ SCHEDULE SERVICE
          - path: /api/v1/schedule
            pathType: Prefix
            backend:
              service:
                name: planit-schedule-svc
                port:
                  number: 8082

          # ✅ INSIGHT SERVICE
          - path: /api/v1/insight
            pathType: Prefix
            backend:
              service:
                name: planit-insight-svc
                port:
                  number: 8084
